@@ -1,23 +1,23 @@
 package com.linkedin.metadata.service;
 
+import static com.linkedin.metadata.Constants.DOMAINS_ASPECT_NAME;
 import static com.linkedin.metadata.service.util.ServiceTestUtils.createMockDomainsClient;
-import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anySet;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.reset;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
 import com.linkedin.common.UrnArray;
 import com.linkedin.common.urn.Urn;
 import com.linkedin.common.urn.UrnUtils;
 import com.linkedin.data.template.RecordTemplate;
 import com.linkedin.domain.Domains;
 import com.linkedin.entity.Aspect;
-import com.linkedin.entity.EntityResponse;
-import com.linkedin.entity.EnvelopedAspect;
-import com.linkedin.entity.EnvelopedAspectMap;
 import com.linkedin.entity.client.SystemEntityClient;
 import com.linkedin.metadata.Constants;
+import com.linkedin.metadata.aspect.AspectRetriever;
 import com.linkedin.metadata.resource.ResourceReference;
 import com.linkedin.metadata.utils.GenericRecordUtils;
 import com.linkedin.mxe.MetadataChangeProposal;
@@ -26,9 +26,12 @@ import io.datahubproject.openapi.client.OpenApiClient;
 import io.datahubproject.test.metadata.context.TestOperationContexts;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import javax.annotation.Nullable;
 import org.mockito.Mockito;
 import org.testng.Assert;
+import org.testng.annotations.BeforeClass;
 import org.testng.annotations.Test;
 
 public class DomainServiceTest {
@@ -40,18 +43,23 @@ public class DomainServiceTest {
       UrnUtils.getUrn("urn:li:dataset:(urn:li:dataPlatform:kafka,test,PROD)");
   private static final Urn TEST_ENTITY_URN_2 =
       UrnUtils.getUrn("urn:li:dataset:(urn:li:dataPlatform:kafka,test1,PROD)");
-  private static OperationContext opContext =
-      TestOperationContexts.systemContextNoSearchAuthorization();
-  private static ObjectMapper objectMapper = new ObjectMapper();
+  private static AspectRetriever mockAspectRetriever;
+  private static OperationContext opContext;
+
+  @BeforeClass
+  public void init() {
+    mockAspectRetriever = mock(AspectRetriever.class);
+    opContext = TestOperationContexts.systemContextNoSearchAuthorization(mockAspectRetriever);
+  }
 
   @Test
   private void testSetDomainExistingDomain() throws Exception {
     Domains existingDomains = new Domains();
     existingDomains.setDomains(new UrnArray(ImmutableList.of(TEST_DOMAIN_URN_1)));
-    SystemEntityClient mockClient = createMockEntityClient(existingDomains);
+    setMockAspectRetriever(existingDomains);
     OpenApiClient mockOpenAPIClient = createMockDomainsClient(existingDomains);
 
-    final DomainService service = createDomainsService(mockClient, mockOpenAPIClient);
+    final DomainService service = createDomainsService(mockOpenAPIClient);
 
     Urn newDomainUrn = UrnUtils.getUrn("urn:li:domain:newDomain");
     List<MetadataChangeProposal> events =
@@ -63,7 +71,7 @@ public class DomainServiceTest {
             null);
 
     MetadataChangeProposal event1 = events.get(0);
-    Assert.assertEquals(event1.getAspectName(), Constants.DOMAINS_ASPECT_NAME);
+    Assert.assertEquals(event1.getAspectName(), DOMAINS_ASPECT_NAME);
     Assert.assertEquals(event1.getEntityType(), Constants.DATASET_ENTITY_NAME);
     RecordTemplate domainsAspect1 =
         GenericRecordUtils.deserializeAspect(
@@ -71,8 +79,8 @@ public class DomainServiceTest {
     Assert.assertEquals(
         domainsAspect1, new Domains().setDomains(new UrnArray(ImmutableList.of(newDomainUrn))));
 
-    MetadataChangeProposal event2 = events.get(0);
-    Assert.assertEquals(event2.getAspectName(), Constants.DOMAINS_ASPECT_NAME);
+    MetadataChangeProposal event2 = events.get(1);
+    Assert.assertEquals(event2.getAspectName(), DOMAINS_ASPECT_NAME);
     Assert.assertEquals(event2.getEntityType(), Constants.DATASET_ENTITY_NAME);
     RecordTemplate domainsAspect2 =
         GenericRecordUtils.deserializeAspect(
@@ -81,17 +89,17 @@ public class DomainServiceTest {
         domainsAspect2, new Domains().setDomains(new UrnArray(ImmutableList.of(newDomainUrn))));
   }
 
-  private DomainService createDomainsService(
-      SystemEntityClient entityClient, OpenApiClient mockOpenAPIClient) {
-    return new DomainService(entityClient, mockOpenAPIClient, new ObjectMapper());
+  private DomainService createDomainsService(OpenApiClient mockOpenAPIClient) {
+    return new DomainService(
+        mock(SystemEntityClient.class), mockOpenAPIClient, opContext.getObjectMapper());
   }
 
   @Test
   private void testSetDomainNoExistingDomain() throws Exception {
-    SystemEntityClient mockClient = createMockEntityClient(null);
+    setMockAspectRetriever(null);
     OpenApiClient mockOpenAPIClient = createMockDomainsClient(null);
 
-    final DomainService service = createDomainsService(mockClient, mockOpenAPIClient);
+    final DomainService service = createDomainsService(mockOpenAPIClient);
 
     Urn newDomainUrn = UrnUtils.getUrn("urn:li:domain:newDomain");
     List<MetadataChangeProposal> events =
@@ -103,7 +111,7 @@ public class DomainServiceTest {
             null);
 
     MetadataChangeProposal event1 = events.get(0);
-    Assert.assertEquals(event1.getAspectName(), Constants.DOMAINS_ASPECT_NAME);
+    Assert.assertEquals(event1.getAspectName(), DOMAINS_ASPECT_NAME);
     Assert.assertEquals(event1.getEntityType(), Constants.DATASET_ENTITY_NAME);
     RecordTemplate domainsAspect1 =
         GenericRecordUtils.deserializeAspect(
@@ -111,8 +119,8 @@ public class DomainServiceTest {
     Assert.assertEquals(
         domainsAspect1, new Domains().setDomains(new UrnArray(ImmutableList.of(newDomainUrn))));
 
-    MetadataChangeProposal event2 = events.get(0);
-    Assert.assertEquals(event2.getAspectName(), Constants.DOMAINS_ASPECT_NAME);
+    MetadataChangeProposal event2 = events.get(1);
+    Assert.assertEquals(event2.getAspectName(), DOMAINS_ASPECT_NAME);
     Assert.assertEquals(event2.getEntityType(), Constants.DATASET_ENTITY_NAME);
     RecordTemplate domainsAspect2 =
         GenericRecordUtils.deserializeAspect(
@@ -125,10 +133,10 @@ public class DomainServiceTest {
   private void testUnsetDomainExistingDomain() throws Exception {
     Domains existingDomains = new Domains();
     existingDomains.setDomains(new UrnArray(ImmutableList.of(TEST_DOMAIN_URN_1)));
-    SystemEntityClient mockClient = createMockEntityClient(existingDomains);
+    setMockAspectRetriever(existingDomains);
     OpenApiClient mockOpenAPIClient = createMockDomainsClient(existingDomains);
 
-    final DomainService service = createDomainsService(mockClient, mockOpenAPIClient);
+    final DomainService service = createDomainsService(mockOpenAPIClient);
 
     List<MetadataChangeProposal> events =
         service.buildUnsetDomainProposals(
@@ -137,7 +145,7 @@ public class DomainServiceTest {
                 new ResourceReference(TEST_ENTITY_URN_2, null, null)));
 
     MetadataChangeProposal event1 = events.get(0);
-    Assert.assertEquals(event1.getAspectName(), Constants.DOMAINS_ASPECT_NAME);
+    Assert.assertEquals(event1.getAspectName(), DOMAINS_ASPECT_NAME);
     Assert.assertEquals(event1.getEntityType(), Constants.DATASET_ENTITY_NAME);
     RecordTemplate domainsAspect1 =
         GenericRecordUtils.deserializeAspect(
@@ -145,8 +153,8 @@ public class DomainServiceTest {
     Assert.assertEquals(
         domainsAspect1, new Domains().setDomains(new UrnArray(Collections.emptyList())));
 
-    MetadataChangeProposal event2 = events.get(0);
-    Assert.assertEquals(event2.getAspectName(), Constants.DOMAINS_ASPECT_NAME);
+    MetadataChangeProposal event2 = events.get(1);
+    Assert.assertEquals(event2.getAspectName(), DOMAINS_ASPECT_NAME);
     Assert.assertEquals(event2.getEntityType(), Constants.DATASET_ENTITY_NAME);
     RecordTemplate domainsAspect2 =
         GenericRecordUtils.deserializeAspect(
@@ -157,10 +165,10 @@ public class DomainServiceTest {
 
   @Test
   private void testUnsetDomainNoExistingDomain() throws Exception {
-    SystemEntityClient mockClient = createMockEntityClient(null);
+    setMockAspectRetriever(null);
     OpenApiClient mockOpenAPIClient = createMockDomainsClient(null);
 
-    final DomainService service = new DomainService(mockClient, mockOpenAPIClient, objectMapper);
+    final DomainService service = createDomainsService(mockOpenAPIClient);
 
     List<MetadataChangeProposal> events =
         service.buildUnsetDomainProposals(
@@ -169,7 +177,7 @@ public class DomainServiceTest {
                 new ResourceReference(TEST_ENTITY_URN_2, null, null)));
 
     MetadataChangeProposal event1 = events.get(0);
-    Assert.assertEquals(event1.getAspectName(), Constants.DOMAINS_ASPECT_NAME);
+    Assert.assertEquals(event1.getAspectName(), DOMAINS_ASPECT_NAME);
     Assert.assertEquals(event1.getEntityType(), Constants.DATASET_ENTITY_NAME);
     RecordTemplate domainsAspect1 =
         GenericRecordUtils.deserializeAspect(
@@ -177,8 +185,8 @@ public class DomainServiceTest {
     Assert.assertEquals(
         domainsAspect1, new Domains().setDomains(new UrnArray(Collections.emptyList())));
 
-    MetadataChangeProposal event2 = events.get(0);
-    Assert.assertEquals(event2.getAspectName(), Constants.DOMAINS_ASPECT_NAME);
+    MetadataChangeProposal event2 = events.get(1);
+    Assert.assertEquals(event2.getAspectName(), DOMAINS_ASPECT_NAME);
     Assert.assertEquals(event2.getEntityType(), Constants.DATASET_ENTITY_NAME);
     RecordTemplate domainsAspect2 =
         GenericRecordUtils.deserializeAspect(
@@ -191,10 +199,10 @@ public class DomainServiceTest {
   private void testAddDomainsExistingDomain() throws Exception {
     Domains existingDomains = new Domains();
     existingDomains.setDomains(new UrnArray(ImmutableList.of(TEST_DOMAIN_URN_1)));
-    SystemEntityClient mockClient = createMockEntityClient(existingDomains);
+    setMockAspectRetriever(existingDomains);
     OpenApiClient mockOpenAPIClient = createMockDomainsClient(existingDomains);
 
-    final DomainService service = createDomainsService(mockClient, mockOpenAPIClient);
+    final DomainService service = createDomainsService(mockOpenAPIClient);
 
     List<MetadataChangeProposal> events =
         service.buildAddDomainsProposals(
@@ -205,7 +213,7 @@ public class DomainServiceTest {
                 new ResourceReference(TEST_ENTITY_URN_2, null, null)));
 
     MetadataChangeProposal event1 = events.get(0);
-    Assert.assertEquals(event1.getAspectName(), Constants.DOMAINS_ASPECT_NAME);
+    Assert.assertEquals(event1.getAspectName(), DOMAINS_ASPECT_NAME);
     Assert.assertEquals(event1.getEntityType(), Constants.DATASET_ENTITY_NAME);
     RecordTemplate domainsAspect1 =
         GenericRecordUtils.deserializeAspect(
@@ -215,8 +223,8 @@ public class DomainServiceTest {
         new Domains()
             .setDomains(new UrnArray(ImmutableList.of(TEST_DOMAIN_URN_1, TEST_DOMAIN_URN_2))));
 
-    MetadataChangeProposal event2 = events.get(0);
-    Assert.assertEquals(event2.getAspectName(), Constants.DOMAINS_ASPECT_NAME);
+    MetadataChangeProposal event2 = events.get(1);
+    Assert.assertEquals(event2.getAspectName(), DOMAINS_ASPECT_NAME);
     Assert.assertEquals(event2.getEntityType(), Constants.DATASET_ENTITY_NAME);
     RecordTemplate domainsAspect2 =
         GenericRecordUtils.deserializeAspect(
@@ -229,10 +237,10 @@ public class DomainServiceTest {
 
   @Test
   private void testAddDomainsNoExistingDomain() throws Exception {
-    SystemEntityClient mockClient = createMockEntityClient(null);
+    setMockAspectRetriever(null);
     OpenApiClient mockOpenAPIClient = createMockDomainsClient(null);
 
-    final DomainService service = createDomainsService(mockClient, mockOpenAPIClient);
+    final DomainService service = createDomainsService(mockOpenAPIClient);
 
     List<MetadataChangeProposal> events =
         service.buildAddDomainsProposals(
@@ -243,7 +251,7 @@ public class DomainServiceTest {
                 new ResourceReference(TEST_ENTITY_URN_2, null, null)));
 
     MetadataChangeProposal event1 = events.get(0);
-    Assert.assertEquals(event1.getAspectName(), Constants.DOMAINS_ASPECT_NAME);
+    Assert.assertEquals(event1.getAspectName(), DOMAINS_ASPECT_NAME);
     Assert.assertEquals(event1.getEntityType(), Constants.DATASET_ENTITY_NAME);
     RecordTemplate domainsAspect1 =
         GenericRecordUtils.deserializeAspect(
@@ -252,8 +260,8 @@ public class DomainServiceTest {
         domainsAspect1,
         new Domains().setDomains(new UrnArray(ImmutableList.of(TEST_DOMAIN_URN_1))));
 
-    MetadataChangeProposal event2 = events.get(0);
-    Assert.assertEquals(event2.getAspectName(), Constants.DOMAINS_ASPECT_NAME);
+    MetadataChangeProposal event2 = events.get(1);
+    Assert.assertEquals(event2.getAspectName(), DOMAINS_ASPECT_NAME);
     Assert.assertEquals(event2.getEntityType(), Constants.DATASET_ENTITY_NAME);
     RecordTemplate domainsAspect2 =
         GenericRecordUtils.deserializeAspect(
@@ -268,10 +276,10 @@ public class DomainServiceTest {
     Domains existingDomains = new Domains();
     existingDomains.setDomains(
         new UrnArray(ImmutableList.of(TEST_DOMAIN_URN_1, TEST_DOMAIN_URN_2)));
-    SystemEntityClient mockClient = createMockEntityClient(existingDomains);
+    setMockAspectRetriever(existingDomains);
     OpenApiClient mockOpenAPIClient = createMockDomainsClient(existingDomains);
 
-    final DomainService service = new DomainService(mockClient, mockOpenAPIClient, objectMapper);
+    final DomainService service = createDomainsService(mockOpenAPIClient);
 
     List<MetadataChangeProposal> events =
         service.buildRemoveDomainsProposals(
@@ -282,7 +290,7 @@ public class DomainServiceTest {
                 new ResourceReference(TEST_ENTITY_URN_2, null, null)));
 
     MetadataChangeProposal event1 = events.get(0);
-    Assert.assertEquals(event1.getAspectName(), Constants.DOMAINS_ASPECT_NAME);
+    Assert.assertEquals(event1.getAspectName(), DOMAINS_ASPECT_NAME);
     Assert.assertEquals(event1.getEntityType(), Constants.DATASET_ENTITY_NAME);
     RecordTemplate domainsAspect1 =
         GenericRecordUtils.deserializeAspect(
@@ -291,8 +299,8 @@ public class DomainServiceTest {
         domainsAspect1,
         new Domains().setDomains(new UrnArray(ImmutableList.of(TEST_DOMAIN_URN_1))));
 
-    MetadataChangeProposal event2 = events.get(0);
-    Assert.assertEquals(event2.getAspectName(), Constants.DOMAINS_ASPECT_NAME);
+    MetadataChangeProposal event2 = events.get(1);
+    Assert.assertEquals(event2.getAspectName(), DOMAINS_ASPECT_NAME);
     Assert.assertEquals(event2.getEntityType(), Constants.DATASET_ENTITY_NAME);
     RecordTemplate domainsAspect2 =
         GenericRecordUtils.deserializeAspect(
@@ -304,10 +312,10 @@ public class DomainServiceTest {
 
   @Test
   private void testRemoveDomainsNoExistingDomain() throws Exception {
-    SystemEntityClient mockClient = createMockEntityClient(null);
+    setMockAspectRetriever(null);
     OpenApiClient mockOpenAPIClient = createMockDomainsClient(null);
 
-    final DomainService service = new DomainService(mockClient, mockOpenAPIClient, objectMapper);
+    final DomainService service = createDomainsService(mockOpenAPIClient);
 
     List<MetadataChangeProposal> events =
         service.buildRemoveDomainsProposals(
@@ -318,7 +326,7 @@ public class DomainServiceTest {
                 new ResourceReference(TEST_ENTITY_URN_2, null, null)));
 
     MetadataChangeProposal event1 = events.get(0);
-    Assert.assertEquals(event1.getAspectName(), Constants.DOMAINS_ASPECT_NAME);
+    Assert.assertEquals(event1.getAspectName(), DOMAINS_ASPECT_NAME);
     Assert.assertEquals(event1.getEntityType(), Constants.DATASET_ENTITY_NAME);
     RecordTemplate domainsAspect1 =
         GenericRecordUtils.deserializeAspect(
@@ -326,8 +334,8 @@ public class DomainServiceTest {
     Assert.assertEquals(
         domainsAspect1, new Domains().setDomains(new UrnArray(Collections.emptyList())));
 
-    MetadataChangeProposal event2 = events.get(0);
-    Assert.assertEquals(event2.getAspectName(), Constants.DOMAINS_ASPECT_NAME);
+    MetadataChangeProposal event2 = events.get(1);
+    Assert.assertEquals(event2.getAspectName(), DOMAINS_ASPECT_NAME);
     Assert.assertEquals(event2.getEntityType(), Constants.DATASET_ENTITY_NAME);
     RecordTemplate domainsAspect2 =
         GenericRecordUtils.deserializeAspect(
@@ -336,39 +344,23 @@ public class DomainServiceTest {
         domainsAspect2, new Domains().setDomains(new UrnArray(Collections.emptyList())));
   }
 
-  private static SystemEntityClient createMockEntityClient(@Nullable Domains existingDomains)
-      throws Exception {
-    SystemEntityClient mockClient = Mockito.mock(SystemEntityClient.class);
-    Mockito.when(
-            mockClient.batchGetV2(
-                any(OperationContext.class),
-                Mockito.eq(Constants.DATASET_ENTITY_NAME),
-                Mockito.eq(ImmutableSet.of(TEST_ENTITY_URN_1, TEST_ENTITY_URN_2)),
-                Mockito.eq(ImmutableSet.of(Constants.DOMAINS_ASPECT_NAME))))
-        .thenReturn(
-            existingDomains != null
-                ? ImmutableMap.of(
-                    TEST_ENTITY_URN_1,
-                    new EntityResponse()
-                        .setUrn(TEST_ENTITY_URN_1)
-                        .setEntityName(Constants.DATASET_ENTITY_NAME)
-                        .setAspects(
-                            new EnvelopedAspectMap(
-                                ImmutableMap.of(
-                                    Constants.DOMAINS_ASPECT_NAME,
-                                    new EnvelopedAspect()
-                                        .setValue(new Aspect(existingDomains.data()))))),
-                    TEST_ENTITY_URN_2,
-                    new EntityResponse()
-                        .setUrn(TEST_ENTITY_URN_2)
-                        .setEntityName(Constants.DATASET_ENTITY_NAME)
-                        .setAspects(
-                            new EnvelopedAspectMap(
-                                ImmutableMap.of(
-                                    Constants.DOMAINS_ASPECT_NAME,
-                                    new EnvelopedAspect()
-                                        .setValue(new Aspect(existingDomains.data()))))))
-                : Collections.emptyMap());
-    return mockClient;
+  private static void setMockAspectRetriever(@Nullable Domains existingDomains) {
+    reset(mockAspectRetriever);
+
+    if (existingDomains != null) {
+      Mockito.when(
+              mockAspectRetriever.getLatestAspectObjects(
+                  eq(Set.of(TEST_ENTITY_URN_1, TEST_ENTITY_URN_2)),
+                  eq(Set.of(DOMAINS_ASPECT_NAME))))
+          .thenReturn(
+              ImmutableMap.of(
+                  TEST_ENTITY_URN_1,
+                  Map.of(DOMAINS_ASPECT_NAME, new Aspect(existingDomains.data())),
+                  TEST_ENTITY_URN_2,
+                  Map.of(DOMAINS_ASPECT_NAME, new Aspect(existingDomains.data()))));
+    } else {
+      Mockito.when(mockAspectRetriever.getLatestAspectObjects(anySet(), anySet()))
+          .thenReturn(Collections.emptyMap());
+    }
   }
 }
