@@ -1,12 +1,14 @@
 package com.linkedin.metadata.service;
 
+import static com.linkedin.metadata.Constants.OWNERSHIP_ASPECT_NAME;
 import static com.linkedin.metadata.service.OwnerService.*;
-import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anySet;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.reset;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
 import com.linkedin.common.Owner;
 import com.linkedin.common.OwnerArray;
 import com.linkedin.common.Ownership;
@@ -15,11 +17,9 @@ import com.linkedin.common.urn.Urn;
 import com.linkedin.common.urn.UrnUtils;
 import com.linkedin.data.template.RecordTemplate;
 import com.linkedin.entity.Aspect;
-import com.linkedin.entity.EntityResponse;
-import com.linkedin.entity.EnvelopedAspect;
-import com.linkedin.entity.EnvelopedAspectMap;
 import com.linkedin.entity.client.SystemEntityClient;
 import com.linkedin.metadata.Constants;
+import com.linkedin.metadata.aspect.AspectRetriever;
 import com.linkedin.metadata.resource.ResourceReference;
 import com.linkedin.metadata.service.util.ServiceTestUtils;
 import com.linkedin.metadata.utils.GenericRecordUtils;
@@ -28,9 +28,12 @@ import io.datahubproject.metadata.context.OperationContext;
 import io.datahubproject.test.metadata.context.TestOperationContexts;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import javax.annotation.Nullable;
 import org.mockito.Mockito;
 import org.testng.Assert;
+import org.testng.annotations.BeforeClass;
 import org.testng.annotations.Test;
 
 public class OwnerServiceTest {
@@ -42,10 +45,14 @@ public class OwnerServiceTest {
       UrnUtils.getUrn("urn:li:dataset:(urn:li:dataPlatform:kafka,test,PROD)");
   private static final Urn TEST_ENTITY_URN_2 =
       UrnUtils.getUrn("urn:li:dataset:(urn:li:dataPlatform:kafka,test1,PROD)");
-  private static OperationContext opContext =
-      TestOperationContexts.systemContextNoSearchAuthorization();
-  private static final ObjectMapper objectMapper = new ObjectMapper();
-  @Nullable private static Ownership existingOwnership;
+  private static AspectRetriever mockAspectRetriever;
+  private static OperationContext opContext;
+
+  @BeforeClass
+  public void init() {
+    mockAspectRetriever = mock(AspectRetriever.class);
+    opContext = TestOperationContexts.systemContextNoSearchAuthorization(mockAspectRetriever);
+  }
 
   @Test
   private void testAddOwnersExistingOwner() throws Exception {
@@ -79,15 +86,15 @@ public class OwnerServiceTest {
                     .setTypeUrn(mapOwnershipTypeToEntity(OwnershipType.NONE.toString()))));
 
     MetadataChangeProposal event1 = events.get(0);
-    Assert.assertEquals(event1.getAspectName(), Constants.OWNERSHIP_ASPECT_NAME);
+    Assert.assertEquals(event1.getAspectName(), OWNERSHIP_ASPECT_NAME);
     Assert.assertEquals(event1.getEntityType(), Constants.DATASET_ENTITY_NAME);
     Ownership ownerAspect1 =
         GenericRecordUtils.deserializeAspect(
             event1.getAspect().getValue(), event1.getAspect().getContentType(), Ownership.class);
     Assert.assertEquals(ownerAspect1.getOwners(), expected);
 
-    MetadataChangeProposal event2 = events.get(0);
-    Assert.assertEquals(event2.getAspectName(), Constants.OWNERSHIP_ASPECT_NAME);
+    MetadataChangeProposal event2 = events.get(1);
+    Assert.assertEquals(event2.getAspectName(), OWNERSHIP_ASPECT_NAME);
     Assert.assertEquals(event2.getEntityType(), Constants.DATASET_ENTITY_NAME);
     Ownership ownerAspect2 =
         GenericRecordUtils.deserializeAspect(
@@ -122,15 +129,15 @@ public class OwnerServiceTest {
                     .setTypeUrn(mapOwnershipTypeToEntity(OwnershipType.NONE.toString()))));
 
     MetadataChangeProposal event1 = events.get(0);
-    Assert.assertEquals(event1.getAspectName(), Constants.OWNERSHIP_ASPECT_NAME);
+    Assert.assertEquals(event1.getAspectName(), OWNERSHIP_ASPECT_NAME);
     Assert.assertEquals(event1.getEntityType(), Constants.DATASET_ENTITY_NAME);
     Ownership ownerAspect1 =
         GenericRecordUtils.deserializeAspect(
             event1.getAspect().getValue(), event1.getAspect().getContentType(), Ownership.class);
     Assert.assertEquals(ownerAspect1.getOwners(), expectedOwners);
 
-    MetadataChangeProposal event2 = events.get(0);
-    Assert.assertEquals(event2.getAspectName(), Constants.OWNERSHIP_ASPECT_NAME);
+    MetadataChangeProposal event2 = events.get(1);
+    Assert.assertEquals(event2.getAspectName(), OWNERSHIP_ASPECT_NAME);
     Assert.assertEquals(event2.getEntityType(), Constants.DATASET_ENTITY_NAME);
     Ownership ownerAspect2 =
         GenericRecordUtils.deserializeAspect(
@@ -167,15 +174,15 @@ public class OwnerServiceTest {
                             .setType(OwnershipType.DATA_STEWARD))));
 
     MetadataChangeProposal event1 = events.get(0);
-    Assert.assertEquals(event1.getAspectName(), Constants.OWNERSHIP_ASPECT_NAME);
+    Assert.assertEquals(event1.getAspectName(), OWNERSHIP_ASPECT_NAME);
     Assert.assertEquals(event1.getEntityType(), Constants.DATASET_ENTITY_NAME);
     RecordTemplate ownersAspect1 =
         GenericRecordUtils.deserializeAspect(
             event1.getAspect().getValue(), event1.getAspect().getContentType(), Ownership.class);
     Assert.assertEquals(ownersAspect1, expected);
 
-    MetadataChangeProposal event2 = events.get(0);
-    Assert.assertEquals(event2.getAspectName(), Constants.OWNERSHIP_ASPECT_NAME);
+    MetadataChangeProposal event2 = events.get(1);
+    Assert.assertEquals(event2.getAspectName(), OWNERSHIP_ASPECT_NAME);
     Assert.assertEquals(event2.getEntityType(), Constants.DATASET_ENTITY_NAME);
     RecordTemplate ownersAspect2 =
         GenericRecordUtils.deserializeAspect(
@@ -199,15 +206,15 @@ public class OwnerServiceTest {
     OwnerArray expected = new OwnerArray(ImmutableList.of());
 
     MetadataChangeProposal event1 = events.get(0);
-    Assert.assertEquals(event1.getAspectName(), Constants.OWNERSHIP_ASPECT_NAME);
+    Assert.assertEquals(event1.getAspectName(), OWNERSHIP_ASPECT_NAME);
     Assert.assertEquals(event1.getEntityType(), Constants.DATASET_ENTITY_NAME);
     Ownership ownersAspect1 =
         GenericRecordUtils.deserializeAspect(
             event1.getAspect().getValue(), event1.getAspect().getContentType(), Ownership.class);
     Assert.assertEquals(ownersAspect1.getOwners(), expected);
 
-    MetadataChangeProposal event2 = events.get(0);
-    Assert.assertEquals(event2.getAspectName(), Constants.OWNERSHIP_ASPECT_NAME);
+    MetadataChangeProposal event2 = events.get(1);
+    Assert.assertEquals(event2.getAspectName(), OWNERSHIP_ASPECT_NAME);
     Assert.assertEquals(event2.getEntityType(), Constants.DATASET_ENTITY_NAME);
     Ownership ownersAspect2 =
         GenericRecordUtils.deserializeAspect(
@@ -217,44 +224,31 @@ public class OwnerServiceTest {
 
   private static OwnerService createMockOwnersService(@Nullable Ownership existingOwnership)
       throws Exception {
-    OwnerServiceTest.existingOwnership = existingOwnership;
+
+    setMockAspectRetriever(existingOwnership);
     return new OwnerService(
-        createMockEntityClient(existingOwnership, Constants.OWNERSHIP_ASPECT_NAME),
+        mock(SystemEntityClient.class),
         ServiceTestUtils.createMockOwnersClient(existingOwnership),
-        objectMapper);
+        opContext.getObjectMapper());
   }
 
-  private static SystemEntityClient createMockEntityClient(
-      @Nullable RecordTemplate aspect, String aspectName) throws Exception {
-    SystemEntityClient mockClient = Mockito.mock(SystemEntityClient.class);
-    Mockito.when(
-            mockClient.batchGetV2(
-                any(OperationContext.class),
-                Mockito.eq(Constants.DATASET_ENTITY_NAME),
-                Mockito.eq(ImmutableSet.of(TEST_ENTITY_URN_1, TEST_ENTITY_URN_2)),
-                Mockito.eq(ImmutableSet.of(aspectName))))
-        .thenReturn(
-            aspect != null
-                ? ImmutableMap.of(
-                    TEST_ENTITY_URN_1,
-                    new EntityResponse()
-                        .setUrn(TEST_ENTITY_URN_1)
-                        .setEntityName(Constants.DATASET_ENTITY_NAME)
-                        .setAspects(
-                            new EnvelopedAspectMap(
-                                ImmutableMap.of(
-                                    aspectName,
-                                    new EnvelopedAspect().setValue(new Aspect(aspect.data()))))),
-                    TEST_ENTITY_URN_2,
-                    new EntityResponse()
-                        .setUrn(TEST_ENTITY_URN_2)
-                        .setEntityName(Constants.DATASET_ENTITY_NAME)
-                        .setAspects(
-                            new EnvelopedAspectMap(
-                                ImmutableMap.of(
-                                    aspectName,
-                                    new EnvelopedAspect().setValue(new Aspect(aspect.data()))))))
-                : Collections.emptyMap());
-    return mockClient;
+  private static void setMockAspectRetriever(@Nullable Ownership existingOwnership) {
+    reset(mockAspectRetriever);
+
+    if (existingOwnership != null) {
+      Mockito.when(
+              mockAspectRetriever.getLatestAspectObjects(
+                  eq(Set.of(TEST_ENTITY_URN_1, TEST_ENTITY_URN_2)),
+                  eq(Set.of(OWNERSHIP_ASPECT_NAME))))
+          .thenReturn(
+              ImmutableMap.of(
+                  TEST_ENTITY_URN_1,
+                  Map.of(OWNERSHIP_ASPECT_NAME, new Aspect(existingOwnership.data())),
+                  TEST_ENTITY_URN_2,
+                  Map.of(OWNERSHIP_ASPECT_NAME, new Aspect(existingOwnership.data()))));
+    } else {
+      Mockito.when(mockAspectRetriever.getLatestAspectObjects(anySet(), anySet()))
+          .thenReturn(Collections.emptyMap());
+    }
   }
 }
